--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,8 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/summer/drupal
-    - /bin/cp -R * $DEPLOYPATH
+    - export DEPLOYPATH=/home/summerbreezeair/drupal
+    - /bin/cp * $DEPLOYPATH
 
 #deployment:
 #tasks:
